src/snapshots/rlox__vm__tests__add_mul.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 1 + 2 * 3;\")"
---
stdout:
7


stderr:


