src/snapshots/rlox__vm__tests__div_0.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 1 / 0;\")"
---
stdout:
inf


stderr:


