src/snapshots/rlox__vm__tests__less_equal.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 1 <= 1; print 0 <= 1; print 2 <= 1;\")"
---
stdout:
true
true
false


stderr:


