src/snapshots/rlox__vm__tests__less_than.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 1 < 1; print 0 < 1; print 2 < 1;\")"
---
stdout:
false
true
false


stderr:


