src/snapshots/rlox__vm__tests__mismatched_add.snap
---
source: src/vm.rs
expression: stderr
---
Error: Operator '+' takes two numbers. Got a boolean (true) and a number (1).
   ╭─[<unknown>:1:13]
   │
 1 │ return true + 1;
   │ ───────────────  
   │                   
───╯

