src/snapshots/rlox__vm__tests__mismatched_sub.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print true - 1;\")"
---
stdout:


stderr:
Error: Operator '-' takes two numbers. Got a boolean (true) and a number (1).
   ╭─[<unknown>:1:13]
   │
 1 │ print true - 1;
   │ ──────────────  
   │                  
───╯


