src/snapshots/rlox__vm__tests__mul_div.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 6 * 6 / 3;\")"
---
stdout:
12


stderr:


