src/snapshots/rlox__vm__tests__negate_bool.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print -true;\")"
---
stdout:


stderr:
Error: Tried to negate a boolean (true)
   ╭─[<unknown>:1:13]
   │
 1 │ print -true;
   │        ────  
   │               
───╯


