src/snapshots/rlox__vm__tests__nested_parens.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print ((1) / (1 + (1 / 0.5)) * 3);\")"
---
stdout:
1


stderr:


