src/snapshots/rlox__vm__tests__print_nil.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print nil;\")"
---
stdout:
nil


stderr:


