src/snapshots/rlox__vm__tests__string.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(r#\"print \"foo\";\"#)"
---
stdout:
"foo"


stderr:


